# rethinkdbrust

./: .gitignore  Cargo.toml  README.md  sync-docs.sh
rethinkdb_data/: log_file
src/: api.rs  lib.rs  ql2.rs  rethinkdb.rs  test.rs
src/lib/: api.rs  client.rs  mod.rs  test.rs
